[package]
name = "rswin32"
version = "0.1.0"
edition = "2024"
authors = ["wuxia"]
description = "Windows utility functions implemented by Rust"
readme = "README.md"
license = "Apache2.0"
keywords = ["winutils", "windows","utilities"]
categories = ["utilities"]
repository = "https://github.com/wuxia101/rswin32"

[dependencies]

anyhow = "1.0.98"
ntapi = {version = "0.4.1", features = ["user"]}
winapi = { version = "0.3.9", features = [
    "powerbase",
    "sysinfoapi",
    "minwindef",
    "winnt",
    "winerror",
    "processthreadsapi",
    "impl-default",
    "winbase",
    "ntdef",
    "ntstatus",
    "libloaderapi",
]}
